  character on the current line, then the start/end of the line, and then
  to the first/last visible line. Also, even if, for example, the caret is
  already at the start of the line, HOME still needs to be pressed three
  times to go to the start of the viewscreen. This should make these
  commands more reliable in macros

+ Enhancements

- 'Go to End Of Indent' command removed (just use HOME instead); shortcut
  of 'Indent Selected Lines' changed to C+i
- 'Create new java file' and 'Create new java applet' macros added
  (Valery Kondakoff)
- 'Print' command now prints a footer with the date/time and page number
  at the bottom of each page
- The help viewer now displays plain text files in a monospaced font
- Many dialog boxes tweaked to comply with Java look & feel guidelines;
  as a result they look better
- Improved 'Send' command error handling

+ Bug Fixes

- Fixed incorrect error message displayed when a plugin depends on another
  one that isn't installed
- Plugin manager's 'update' feature didn't work (since 2.5pre3)
- Minor changes to scrolling code, might solve recently reported problems
  when running on Java 2
- The tab width was incorrect in printed output
- Symlinks should now work in the FTP browser (but even directory links
  are still disaplayed as regular files; fixing this would require more
  work) (since 2.5pre1)
- Backup directory code was broken (since 2.5pre1)
- Entering an invalid FTP URL in the 'Open Path' dialog box will no longer
  throw an IllegalArgumentException and hang jEdit (since 2.5pre1)
- Buffer._read() called setDirty() in a non-threadsafe way, this could
  cause problems with buffer tabs for example (since 2.5pre1)

* Version 2.5pre4

+ New Features

- The tool bar can be edited in Utilities->Global Options->Tool Bar
- For plugin developers: new EnhancedFrame class provides automatic
  Enter/Escape key handling for JFrames
- New RegistersChanged message is sent when the value of a register changes